--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - '.github/workflows/**'
   schedule:
-    - cron: '*/3 * * * *'
+    - cron: '18 9 * * *'
 
 env:
   TZ: Asia/Shanghai
